# G4-tp

./: CMakeLists.txt  GNUmakefile  README.md  README.txt  TPex.cc  TPex.in  init_vis.mac  run.mac  run_tp.mac  run_verbose.mac  test.mac  vis.mac
analysis/: compare1.C
geometries/: thick_cylinder_geometry.gdml  thick_tube_geometry.gdml  thin_cylinder_geometry.gdml  thin_cylinder_vacuum_geometry.gdml  tp_source_scint.gdml  tp_source_scint_colim.gdml  verythin_cylinder_geometry.gdml  verythin_tube_geometry.gdml  verythin_tube_vacuum_geometry.gdml
include/: TPAbortHandler.hh  TPDetectorConstruction.hh  TPDetectorConstructionMessenger.hh  TPEventAction.hh  TPHistoManager.hh  TPHistoManagerMessenger.hh  TPPrimaryGeneratorAction.hh  TPPrimaryGeneratorActionMessenger.hh  TPRunAction.hh  TPStepMax.hh  TPSteppingAction.hh
src/: TPAbortHandler.cc  TPDetectorConstruction.cc  TPDetectorConstructionMessenger.cc  TPEventAction.cc  TPHistoManager.cc  TPHistoManagerMessenger.cc  TPPrimaryGeneratorAction.cc  TPPrimaryGeneratorActionMessenger.cc  TPRunAction.cc  TPStepMax.cc  TPSteppingAction.cc
